# DevPulse

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py
backend/app/engine/: __init__.py  profiler.py  wrapper.py
backend/app/models/: analysis.py  user.py
backend/tests/: test_engine.py  test_health.py
engine/: CMakeLists.txt
engine/bindings/: bindings.cpp
engine/include/: benchmark.h
engine/src/: benchmark.cpp
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/types/: analysis.ts
